# censortracker_backend

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  manage.py  pre-commit.sh  pyproject.toml
config/: .env.template
locale/ru/LC_MESSAGES/: django.po
lua/api/proxy-config/: init.lua
lua/utils/: status.lua
meta/configs/: unit.conf.json
meta/docker/: Dockerfile.app  docker-compose.yml
meta/local-dev/: Dockerfile.web  check_settings.py  deploy.bash  docker-compose.yml  nginx.conf
meta/sh/: manage  rq  start.app  start.celery.beat  start.celery.workers
server/: __init__.py  celery.py  urls.py  wsgi.py
server/apps/api/: admin.py  apps.py  models.py  tasks.py  urls.py  views.py
server/apps/api/fixtures/: db.json
server/apps/api/logic/: blocked.py  ips_data.py  managers.py  mixins.py  notifier.py  permissions.py  serializers.py  throttling.py
server/apps/api/migrations/: 0001_initial.py  0002_allow_null.py  0003_make_field_charfield.py  0004_auto_20200729_0752.py  0005_auto_20200813_1806.py  0006_auto_20200814_1335.py  0007_add_client_country_field.py  0008_change_max_len_for_fields.py  0009_add_reported_field.py  0010_add_ct_meta_info.py  0011_add_user_agent_field.py  0012_remove_deprecated_models_and_fields.py
server/apps/core/: __init__.py  admin.py  apps.py  models.py  urls.py  views.py
server/apps/core/fixtures/: data.json
server/apps/core/logic/: actions.py  signals.py  storages.py
server/apps/core/migrations/: 0001_add_core_models.py  0001_init.py  0002_add_fields.py  0003_remove_props.py  0005_allow_blank_fields.py  (+15 more)
server/apps/users/: __init__.py  admin.py  apps.py  authentication.py  managers.py  models.py  urls.py
server/settings/: __init__.py
server/settings/components/: __init__.py  caches.py  celery.py  common.py  redis.py  sentry.py
server/settings/environments/: development.py  production.py
server/static/css/: style.css
server/static/favicon/: site.webmanifest
server/templates/account/: email_confirm.html  login.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  signup.html  verification_sent.html  verified_email_required.html
(+22 files in other folders)
