[tool.poetry]
name = "server"
version = "0.1.0"
description = "Backed for CensorTracker"
authors = ["Roskomsvoboda"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
django = "==3.2.14"
djangorestframework = "*"
django-split-settings = "*"
requests = "*"
psycopg2-binary = "*"
sentry-sdk = "*"
django-ipware = "*"
redis = "^3.5.3"
hiredis = "^1.1.0"
django-debug-toolbar = "^3.2.1"
django-redis-cache = "^3.0.0"
geoip2 = "^4.2.0"
djangorestframework-camel-case = "^1.2.0"
validators = "^0.18.2"
djangorestframework-api-key = "^2.2.0"
PyGithub = "^1.55"
django-json-widget = "^1.1.1"
google-cloud-storage = "^2.5.0"
boto3 = "^1.24.92"

[tool.poetry.dev-dependencies]
isort = "^5.9.3"
autoflake = "^1.4"
black = "^21.7b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
